tests/ui/asm/naked-with-invalid-repr-attr.stderr
error[E0517]: attribute should be applied to a struct, enum, or union
  --> $DIR/naked-with-invalid-repr-attr.rs:7:8
   |
LL |   #[repr(C)]
   |          ^
...
LL | / extern "C" fn example1() {
LL | |
LL | |     unsafe { asm!("", options(noreturn)) }
LL | | }
   | |_- not a struct, enum, or union
   |
   = note: `#[repr(align(...))]` is valid on functions

error[E0517]: attribute should be applied to a struct, enum, or union
  --> $DIR/naked-with-invalid-repr-attr.rs:16:8
   |
LL |   #[repr(transparent)]
   |          ^^^^^^^^^^^
...
LL | / extern "C" fn example2() {
LL | |
LL | |     unsafe { asm!("", options(noreturn)) }
LL | | }
   | |_- not a struct, enum, or union
   |
   = note: `#[repr(align(...))]` is valid on functions

error[E0517]: attribute should be applied to a struct, enum, or union
  --> $DIR/naked-with-invalid-repr-attr.rs:25:19
   |
LL |   #[repr(align(16), C)]
   |                     ^
...
LL | / extern "C" fn example3() {
LL | |
LL | |     unsafe { asm!("", options(noreturn)) }
LL | | }
   | |_- not a struct, enum, or union
   |
note: `#[repr(align(...))]` alone is valid on functions
  --> $DIR/naked-with-invalid-repr-attr.rs:25:8
   |
LL | #[repr(align(16), C)]
   |        ^^^^^^^^^

error[E0517]: attribute should be applied to a struct, enum, or union
  --> $DIR/naked-with-invalid-repr-attr.rs:35:8
   |
LL |   #[repr(C, packed)]
   |          ^
...
LL | / extern "C" fn example4() {
LL | |
LL | |
LL | |     unsafe { asm!("", options(noreturn)) }
LL | | }
   | |_- not a struct, enum, or union
   |
   = note: `#[repr(align(...))]` is valid on functions

error[E0517]: attribute should be applied to a struct or union
  --> $DIR/naked-with-invalid-repr-attr.rs:35:11
   |
LL |   #[repr(C, packed)]
   |             ^^^^^^
...
LL | / extern "C" fn example4() {
LL | |
LL | |
LL | |     unsafe { asm!("", options(noreturn)) }
LL | | }
   | |_- not a struct or union
   |
   = note: `#[repr(align(...))]` is valid on functions

error[E0517]: attribute should be applied to an enum
  --> $DIR/naked-with-invalid-repr-attr.rs:47:8
   |
LL |   #[repr(u8)]
   |          ^^
...
LL | / extern "C" fn example5() {
LL | |
LL | |     unsafe { asm!("", options(noreturn)) }
LL | | }
   | |_- not an enum
   |
   = note: `#[repr(align(...))]` is valid on functions

error: aborting due to 6 previous errors

For more information about this error, try `rustc --explain E0517`.
